@@ -42,7 +42,7 @@ master_doc = 'index'
 
 # General information about the project.
 project = u'mrjob'
-copyright = u'2010, Yelp'
+copyright = u'2010-2011, Yelp'
 
 # The version info for the project you're documenting, acts as replacement for
 # |version| and |release|, also used in various other places throughout the
